--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Share-Style_SFC</title>
-    <link rel="stylesheet" href="css/facebook_custom_style_sfc.css">
+    <link rel="stylesheet" href="/workspaces/PublicScriptInjectLink/css/facebook_custom_style_sfc.css">
 </head>
 <body>
-    
+    <div id="sfx_badge_logo"></div>
 </body>
 </html>
