--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share-Style_SFC</title>
+    <title>Share-Style-SFC</title>
     <link rel="stylesheet" href="/workspaces/PublicScriptInjectLink/css/facebook_custom_style_sfc.css">
 </head>
 <body>
-    <div id="sfx_badge_logo"></div>
+    <div id="master-layout" style="width: 100%; height: 95vh; background-color: rgb(199, 199, 199);">
+        <div id="sfx_badge_logo"></div>
+    </div>
 </body>
 </html>
